--- a/app-dam/src/frontend/dam/src/app/dispositivo/dispositivo.component.html
+++ b/app-dam/src/frontend/dam/src/app/dispositivo/dispositivo.component.html
@@ -1,6 +1,11 @@
-<div>
+<p>
+  dispositivo works!
+</p>
+
+--<!--<div>
   <p>Dispositivo:</p>
   <p>ID: {{dispositivo?.id}}</p>
   <p>Area: {{dispositivo?.area}}</p>
   <p>Descripción: {{dispositivo?.description}}</p>
-</div>
+  <button (click)="cambiarArea()">Cambiar área</button>
+</div>-->
