--- a/app-dam/src/frontend/dam/src/app/dispositivo/dispositivo.page.html
+++ b/app-dam/src/frontend/dam/src/app/dispositivo/dispositivo.page.html
@@ -1,15 +1,26 @@
-<ion-header [translucent]="true">
+<ion-content>>
   <ion-toolbar>
-    <ion-title>dispositivo</ion-title>
+    <ion-title>Dispositivo</ion-title>
   </ion-toolbar>
-</ion-header>
+  
+  <ng-container *ngIf="dispositivo">
+    <ion-card>
+      <ion-card-header>
+        <ion-card-title>{{ dispositivo.nombre }}</ion-card-title>
+        <ion-card-subtitle>{{ dispositivo.ubicacion }}</ion-card-subtitle>
+      </ion-card-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">dispositivo</ion-title>
-    </ion-toolbar>
-  </ion-header>
---<!--  <button (click)="subscribe()">Subscribe</button>
-  <button (click)="unsubscribe()">Unsubscribe</button> -->
+      <ion-card-content>
+        Electroválvula: {{ dispositivo.electrovalvulaId }}
+        <br>
+        Última medición de humedad: {{humedadaleatoria}}%
+      </ion-card-content>
+
+      <ion-button [routerLink]="['/listado-mediciones/', dispositivo.dispositivoId]" expand="block">
+        Ver Mediciones
+      </ion-button>
+      <!-- <ion-button fill="clear">Action 1</ion-button>
+      <ion-button fill="clear">Action 2</ion-button> -->
+    </ion-card>
+  </ng-container>
 </ion-content>
