--- a/app-dam/src/frontend/dam/src/app/listado-mediciones/listado-mediciones.page.html
+++ b/app-dam/src/frontend/dam/src/app/listado-mediciones/listado-mediciones.page.html
@@ -1,13 +1,21 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>listado-mediciones</ion-title>
-  </ion-toolbar>
-</ion-header>
-
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">listado-mediciones</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <ion-toolbar>
+    <ion-title>Listado de Mediciones</ion-title>
+  </ion-toolbar>
+
+  <!-- Lista de mediciones -->
+  <ion-list *ngIf="mediciones && mediciones.length > 0">
+    <ion-item *ngFor="let medicion of mediciones">
+      <ion-label>
+        <h3>ID: {{ medicion.medicionId }}</h3>
+        <p>Fecha: {{ medicion.fecha }}</p>
+        <p>Valor: {{ medicion.valor }}</p>
+        <p>Dispositivo ID: {{ medicion.dispositivoId }}</p>
+      </ion-label>
+    </ion-item>
+  </ion-list>
+ 
+  <div *ngIf="mediciones && mediciones.length === 0">
+    <p>No hay mediciones disponibles para este dispositivo.</p>
+  </div>
 </ion-content>
