--- a/app-dam/src/frontend/dam/src/app/listado-dispositivos/listado-dispositivos.page.html
+++ b/app-dam/src/frontend/dam/src/app/listado-dispositivos/listado-dispositivos.page.html
@@ -7,7 +7,7 @@
   <ion-list *ngIf="dispositivos && dispositivos.length > 0">
     <ion-item *ngFor="let dispositivo of dispositivos" [appCambiarFondoColor]="'lightblue'">
       <a [routerLink]="['/dispositivo/', dispositivo.dispositivoId]" routerLinkActive="active" ariaCurrentWhenActive="page">
-        {{ dispositivo.nombre }}- {{ dispositivo.ubicacion }}
+        {{ dispositivo.nombre }}- {{ dispositivo.ubicacion | cambiarAmayuscula}}
       </a>
     </ion-item>
   </ion-list>
